--- a/.env.example
+++ b/.env.example
@@ -67,3 +67,5 @@ VITE_APP_NAME="${APP_NAME}"
 ADMIN_NAME=Admin
 ADMIN_EMAIL=admin@example.com
 ADMIN_PASSWORD=password
+DEMO_TENANT_NAME="Demo Workspace"
+DEMO_TENANT_SLUG=demo-workspace
